[tool.poetry]
name = "cop-byochatbot"
version = "0.1.0"
description = ""
authors = ["Kate Lee <kate.lee@cognite.com>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "1.31.1"
langchain = "0.1.7"
openai = "0.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
